fix: input and large text on mobile

--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -2,15 +2,14 @@
     position: relative;
     background-color: black;
     height: 150px;
-
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .inputContainer {
-    position: fixed;
-    top: 125px;
+    position: absolute;
+    bottom: -25px;
     display: flex;
     gap: 8px;
 }
